--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,12 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+
+@font-face {
+  font-family: questrial;
+  src: url("/public/fonts/Questrial-Regular.ttf");
+}
+
+@tailwind base;
+@tailwind components;
+@tailwind utilities;
